[package]
edition = "2018"
name = "passg"
version = "0.2.0"

description = "Generate pseudo-random passwords from the command line"
license = "MIT"
readme = "README.md"
repository = "https://github.com/xgillard/passg"

categories = ["command-line-utilities"]
keywords = ["password"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"
rand = "0.8.4"
structopt = "0.3.23"
thiserror = "1.0.28"
