[package]
edition = "2018"
name = "passg-tool"
version = "0.1.0"

description = "Generate pseudo-random passwords from the command line"
license = "MIT"
readme = "README.md"
repository = "https://github.com/xgillard/passg"

categories = ["command-line-utilities", "authentication"]
keywords = ["password"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
passg-lib = {version = "0.1.0", path = "../passg-lib"}
structopt = "0.3.23"
